Fix issue with logo alignment

--- a/src/webui/sass/components/_topbar.sass
+++ b/src/webui/sass/components/_topbar.sass
@@ -13,6 +13,8 @@
 
 .TopBar__inner__logo
     +type-logo
+    align-items: center
+    display: flex
 
 .TopBar__inner__logo a
     color: inherit
